--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.5",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
+    "install": "^0.13.0",
+    "jose": "^5.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
