--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
