--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.5",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "install": "^0.13.0",
     "jose": "^5.2.0",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.4",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
