--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "framer-motion": "^11.0.3",
     "install": "^0.13.0",
     "jose": "^5.2.0",
     "next": "14.1.0",
